# my_ethernet

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
anime/: admin.py  models.py  urls.py  views.py
anime/migrations/: 0001_initial.py  0002_alter_anime_link_anime_alter_anime_title_anime.py  0002_listanime.py  (+1 more)
app/: Dockerfile  entrypoint.sh  requirements.txt  youtube.example.json
currencies/: models.py  urls.py  views.py
dashboard/: urls.py  views.py
hh/: admin.py  apps.py  models.py  urls.py  views.py
manga/: admin.py  apps.py  models.py  urls.py  views.py
news/: admin.py  models.py  urls.py  views.py
pys/: asgi.py  settings.py  urls.py  wsgi.py
pyss/: apps.py  context.py  db.sqlite  twitch_oauth.py  types.py  urls.py  views.py
serials/: admin.py  apps.py  models.py  urls.py  views.py
task_scheduler/: anime_periodic_tasks.py  apps.py  asyncio_hh.py  currency_periodic_tasks.py  hh_periodic_tasks.py  keys.example.py  managed_file.py  manga_periodic_tasks.py  news_periodic_tasks.py  serials_periodic_tasks.py  tasks.py  test_async_youtube.py  torrents_periodic_tasks.py  twitch_periodic_tasks.py  vk_periodic_tasks.py  weather_periodic_tasks.py  youtube_build.py  youtube_periodic_tasks.py
torrents/: admin.py  apps.py  models.py  urls.py  views.py
twitch/: admin.py  apps.py  models.py  urls.py  views.py
vk/: apps.py  models.py  urls.py  views.py
weathers/: admin.py  apps.py  models.py  urls.py  views.py
youtube/: models.py  urls.py  views.py
(+168 files in other folders)
