[tool.poetry]
name = "py"
version = "0.1.0"
description = ""
authors = ["ucsm <b_438@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
feedparser = "^6.0.8"
bs4 = "^0.0.1"
google-auth = "^2.6.0"
google-api-python-client = "^2.39.0"
google-auth-oauthlib = "^0.5.0"
twitchAPI = "^2.5.2"
httpx = {version = "^0.22.0", extras = ["http2"]}
lxml = "^4.8.0"
plotly = "^5.6.0"
pandas = "^1.4.1"
whitenoise = "^6.0.0"
django-stubs = "^1.10.1"
django-dramatiq = "^0.10.0"
dj-database-url = "^0.5.0"
pika = "^1.2.0"
APScheduler = "^3.9.1"
dramatiq = "^1.12.3"
redis = "^4.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
